# afd

./: CHANGES  CREDITS  Changelog  INSTALL  Include.mk  Include.mk.aix  Include.mk.cygwin  Include.mk.darwin  Include.mk.freebsd  Include.mk.ftx  Include.mk.hpux10  Include.mk.hpux1x  Include.mk.irix  Include.mk.linux  Include.mk.sco  Include.mk.sfu  Include.mk.sun  Include.mk.unicos  KNOWN-BUGS  Makefile  Makefile.am  Makefile.in  README.configure  README.md  THANKS  TODO  UNSOLVED_PROBLEMS  aclocal.m4  afd.spec  afd.spec.in  changes-1.2.x-1.3.x  config.h  configure  configure.ac  configure.in  errors  version.h
etc/: AFD_CONFIG.sample.in  AFD_MON_CONFIG.sample  DIR_CONFIG.sample  Makefile.am  Makefile.in  afd.users.sample.in
scripts/: Makefile  Makefile.am  Makefile.in  afd  afd.in  afd.sysconfig  afd_auto_config  afd_auto_config.in  afd_unused_infos.in  afdalarm  afdmon.in  rafdd_cmd  rafdd_cmd.in  rafdd_cmd_ssh  rafdd_cmd_ssh.in  rmon_ctrl  rmon_ctrl.in  rmon_ctrl_ssh
src/UI/Motif/: Makefile.am  Makefile.in
src/UI/Motif/afd_ctrl/: Makefile.am  Makefile.in  afd_ctrl.c  afd_ctrl.h  check_host_status.c  check_status.c  check_tv_status.c  create_tv_window.c  draw_line.c  draw_tv_line.c  error_history.c  event_reason.c  find_host_dialog.c  get_line_pos.c  init_jd_structure.c  locate_xy_column.c  mouse_handler.c  resize_tv_window.c  setup_tv_window.c  setup_window.c  tv_window_size.c
src/UI/Motif/afd_info/: Makefile.am  Makefile.in  afd_info.c  afd_info.h  info_callbacks.c  update_info.c
src/UI/Motif/afd_load/: Makefile.am  Makefile.in  afd_load.c  afd_load.h  afd_load_callbacks.c
src/UI/Motif/common/: Makefile.am  Makefile.in  check_host_permissions.c  check_info_file.c  check_nummeric.c  config_log.c  generic_print.c  get_current_jid_list.c  get_file_mask_list.c  get_ip_no.c  get_printer_cmd.c  handle_info_file.c  handle_setup_file.c  init_color.c  insert_passwd.c  locate_xy.c  lookup_color.c  make_xprocess.c  motif_common_defs.h  print_file_size.c  sfilter.c  sfilter_old.c  show_info.c  show_message.c  store_host_names.c  update_time.c  view_data.c  wait_visible.c  window_id.c  x_common_defs.h  xrec.c
src/UI/Motif/dir_ctrl/: Makefile.am  Makefile.in  check_dir_status.c  dir_ctrl.c  dir_ctrl.h  dir_expose_handler.c  draw_dir_line.c  mouse_handler.c  resize_dir_window.c  select_dir_dialog.c  setup_dir_window.c
src/UI/Motif/dir_info/: Makefile.am  Makefile.in  dir_info.c  dir_info.h  update_info.c
src/UI/Motif/edit_hc/: Makefile.am  Makefile.in  accept_drop.c  edit_hc.c  edit_hc.h  edit_hc_callbacks.c  remove_host.c
src/UI/Motif/handle_event/: Makefile.am  Makefile.in  callbacks.c  handle_event.c  handle_event.h
src/UI/Motif/mafd_ctrl/: Makefile.am  Makefile.in  check_host_status.c  check_tv_status.c  draw_line.c  draw_tv_line.c  error_history.c  event_reason.c  expose_handler.c  find_host_dialog.c  get_job_priority.c  init_jd_structure.c  mafd_ctrl.c  mafd_ctrl.h  mouse_handler.c  setup_tv_window.c  setup_window.c  window_size.c
src/UI/Motif/mon_ctrl/: Makefile.am  Makefile.in  check_afd_status.c  check_mon_status.c  draw_mon_line.c  mconfig_log.c  mon_ctrl.c  mon_ctrl.h  mon_error_history.c  mon_expose_handler.c  mon_window_size.c  mouse_handler.c  select_afd_dialog.c  setup_mon_window.c
src/UI/Motif/mon_info/: Makefile.am  Makefile.in  info_callbacks.c  mon_info.c  mon_info.h  update_info.c
src/UI/Motif/mshow_log/: Makefile.am  Makefile.in  check_log.c  init_text.c  log_callbacks.c  mshow_log.c  mshow_log.h
src/amg/: Makefile.am  Makefile.in  amg.c  amg_zombie_check.c  amgdefs.h  check_file_dir.c  check_files.c  check_inotify_files.c  check_old_time_jobs.c  check_onetime_config.c  check_option.c  check_paused_dir.c  clear_msg_buffer.c  clear_pool_dir.c  com.c  convert_fra.c  convert_fsa.c  convert_jid.c  count_pool_files.c  create_db.c  create_fra.c  create_fsa.c  create_sa.c  del_unknown_inotify_files.c  dir_check.c  enter_time_job.c  eval_bul_rep_config.c  eval_dir_config.c  eval_dir_options.c  eval_time_str.c  handle_options.c  handle_retrieve_list.c  handle_time_jobs.c  in_time.c  init_dir_check.c  init_job_data.c  init_msg_buffer.c  link_files.c  lookup_dc_id.c  lookup_dir_id.c  (+19 more)
src/cmdline/: Makefile.am  Makefile.in  aftp.c  aftpdefs.h  asmtp.c  asmtpdefs.h  awmo.c  cmdline.h  eval_files.c  get_remote_file_names.c  init_aftp.c  init_asmtp.c  init_awmo.c  trans_log.c
src/common/: Makefile.am  Makefile.in  attach_afd_mon_status.c  attach_afd_status.c  attach_buf.c  calc_next_time.c  change_alias_order.c  change_name.c  check_create_path.c  check_dir.c  check_fake_user.c  check_fra.c  check_fsa.c  check_lock.c  check_msa.c  clr_fl.c  coe_open.c  convert_error_queue.c  convert_ls_data.c  copy_file.c  create_message.c  create_name.c  create_remote_dir.c  daemon_init.c  delete_log_ptrs.c  detach_afd_mon_status.c  detach_afd_status.c  eaccess.c  error_action.c  eval_dupcheck_options.c  eval_host_config.c  eval_time_str.c  eval_timeout.c  event_log.c  exec_cmd.c  expand_path.c  extract_cus.c  fra_attach.c  fra_detach.c  fsa_attach.c  (+69 more)
src/fd/: Makefile.am  Makefile.in  append.c  archive_file.c  attach_ls_data.c  check_burst_2.c  check_file_dir.c  check_fra_fd.c  check_fsa_entries.c  check_msg_time.c  check_queue_space.c  compare_dir_local.c  eval_input_gf.c  eval_input_sf.c  eval_message.c  eval_recipient.c  fd.c  fd_check_fsa.c  fddefs.h  fsa_attach_pos.c  get_file_names.c  get_group_list.c  get_job_data.c  get_new_positions.c  get_remote_file_names.c  get_remote_file_names_ftp.c  get_remote_file_names_ftp_mlst.c  get_remote_file_names_http.c  get_remote_file_names_sftp.c  gf_exec.c  gf_ftp.c  gf_http.c  gf_sftp.c  gf_sql.c  gsf_check_fra.c  gsf_check_fsa.c  handle_delete_fifo.c  handle_proxy.c  init_fifos_fd.c  init_fra_data.c  (+39 more)
src/protocols/: Makefile.am  Makefile.in  common.c  commondefs.h  encode_base64.c  ftpcmd.c  ftpdefs.h  httpcmd.c  httpdefs.h  pop3cmd.c  pop3defs.h  scpcmd.c  scpdefs.h  sftpcmd.c  sftpdefs.h  smtpcmd.c  smtpdefs.h  ssh_common.c  ssh_commondefs.h  wmocmd.c  wmodefs.h
src/test/filter/: Makefile.am  Makefile.in  tfilter.c
(+997 files in other folders)
