## Makefile.am

MAINTAINERCLEANFILES = Makefile.in
CLEANFILES           = AFD_CONFIG.sample afd.users.sample
EXTRA_DIST           = AFD_CONFIG.sample.in AFD_MON_CONFIG.sample\
                       DIR_CONFIG.sample INFO-LOOP.sample MON_CONFIG.sample.in\
                       afd.name.sample afd.users.sample.in host.info.sample\
                       rename.rule.sample
sysconf_DATA         = AFD_CONFIG.sample DIR_CONFIG.sample afd.users.sample\
                       INFO-LOOP.sample afd.name.sample host.info.sample\
                       rename.rule.sample
